# tap-erpnext

./: .env.example  AGENTS.md  LICENSE  README.md  catalog.json  meltano.yml  plan.md  pyproject.toml  write_jsonl.py
.github/workflows/: run-zizmor.yml  test.yml
tap_erpnext/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
